# Schedule-Planner

./: .gitIgnore  Advanced_Classes.cpp  Advanced_Clubs.cpp  Advanced_Mode.cpp  Advanced_Other.cpp  CMakeLists.txt  Get_Time.cpp  Other_Toggle.cpp  Schedule Planner.cpp  Schedule-Planner.cpp  Schedule_Header.h  Schedule_Planner.cpp  Scheduler.cpp  check.cpp  main.cpp
SchedulePlannerQML/: Makefile  Makefile.Debug  Makefile.Release  UntitledProject.pro  UntitledProject.qmlproject  UntitledProject.qmlproject.qtds  UntitledProject.qmlproject.qtds.7524b58  main.cpp  qml.qrc
SchedulePlannerQML/UntitledProject/: CMakeLists.txt  UntitledProject.qmlproject  UntitledProject.qmlproject.qtds
SchedulePlannerQML/UntitledProject/content/: AddOption.ui.qml  App.qml  MenuButton.ui.qml  Prompt.ui.qml  SButton.ui.qml  Screen01.ui.qml.autosave  SliderMenu.ui.qml
SchedulePlannerQML/UntitledProject/imports/UntitledProject/: EventListModel.qml
SchedulePlannerQML/content/: AddOption.ui.qml  App.qml  Cal.qml  CalendarButtons.ui.qml  CreateEvent.ui.qml  DefaultEvents.qml  ErrorMessage.ui.qml  InputText.ui.qml  Main_Menu.ui.qml  MenuButton.ui.qml  Prompt.ui.qml  SButton.ui.qml  SliderMenu.ui.qml
SchedulePlannerQML/imports/UntitledProject/: CalendarFunctions.qml
SchedulePlannerQML/release/translations/: qt_de.qm
UntitledProject/: Advanced_Other.cpp  CMakeLists.txt  Other_Toggle.cpp  Schedule_Header.h  UntitledProject.qmlproject  UntitledProject.qmlproject.qtds  check.cpp  mainwindow.cpp  mainwindow.h
UntitledProject/UntitledProject/: UntitledProject.qmlproject.qtds
UntitledProject/UntitledProject/content/: Prompt.ui.qml  SButton.ui.qml  SliderMenu.ui.qml
UntitledProject/content/: AddOption.ui.qml  App.qml  Cal.qml  Calendar.ui.qml  CalendarButtons.ui.qml  CreateEvent.ui.qml  ErrorMessage.ui.qml  Main_Menu.ui.qml  MenuButton.ui.qml  Prompt.ui.qml  SButton.ui.qml  Screen01.ui.qml.autosave  SliderMenu.ui.qml
UntitledProject/imports/UntitledProject/: CalendarFunctions.qml
build-UntitledProject-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
build-UntitledProject-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-UntitledProject-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: QQmlContext.298566478F1BD334.idx  QSqlQuery.C920960445B3447F.idx  databasemanager.cpp.FA484579404D0C62.idx  main.cpp.EF59F23D2724D583.idx  qchar.h.11F77112E47ACE65.idx  qflags.h.E6E8F0AFB1082235.idx  (+32 more)
build-UntitledProject-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/debug/: moc_databasemanager.cpp  moc_predefs.h  myDatabase.sqlite  qrc_qml.cpp
build-UntitledProject-Desktop_Qt_6_5_2_MinGW_64_bit-Release/: Makefile  Makefile.Debug  Makefile.Release  qml_qmlcache.qrc
build-UntitledProject-Desktop_Qt_6_5_2_MinGW_64_bit-Release/.qtc_clangd/: compile_commands.json
build-UntitledProject-Desktop_Qt_6_5_2_MinGW_64_bit-Release/debug/: object_script.UntitledProject.Debug
build-UntitledProject-Desktop_Qt_6_5_2_MinGW_64_bit-Release/release/: content_AddOption.ui_qml.cpp  content_App_qml.cpp  content_Cal_qml.cpp  content_CalendarButtons.ui_qml.cpp  content_CreateEvent.ui_qml.cpp  content_DefaultEvents_qml.cpp  content_ErrorMessage.ui_qml.cpp  content_InputText.ui_qml.cpp  content_Main_Menu.ui_qml.cpp  content_MenuButton.ui_qml.cpp  content_Prompt.ui_qml.cpp  content_SButton.ui_qml.cpp  content_SliderMenu.ui_qml.cpp  moc_predefs.h  myDatabase.sqlite  object_script.UntitledProject.Release  qmlcache_loader.cpp  qrc_qml_qmlcache.cpp
build-UntitledProject-Desktop_Qt_6_5_2_MinGW_64_bit-Release/release/qml/QtLocation/: plugins.qmltypes
build-UntitledProject-Desktop_Qt_6_5_2_MinGW_64_bit-Release/release/translations/: qt_ca.qm  qt_de.qm  qt_es.qm  qt_fr.qm  qt_hu.qm  qt_ja.qm  qt_ko.qm  qt_pl.qm  qt_ru.qm  qt_tr.qm  qt_uk.qm  qt_zh_CN.qm
content/: AddOption.ui.qml  Cal.qml  Calendar.ui.qml  InputText.ui.qml  MenuButton.ui.qml  Prompt.ui.qml  SButton.ui.qml
(+66 files in other folders)
